--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,6 @@
+options:
+  logging: CLOUD_LOGGING_ONLY
+
 steps:
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['builds', 'submit', '--tag', 'gcr.io/$PROJECT_ID/my-service']
