Fix: fixed cloudbuild to follow clearer steps

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,8 +2,11 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 steps:
-- name: 'gcr.io/cloud-builders/gcloud'
-  args: ['builds', 'submit', '--tag', 'gcr.io/$PROJECT_ID/my-service']
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '-t', 'gcr.io/ftyhnbvfgh/my-service', '.']
+
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push', 'gcr.io/ftyhnbvfgh/my-service']
 
 - name: 'gcr.io/cloud-builders/gcloud'
   args: [
