Fix: accidental static project_ID

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,10 +3,10 @@ options:
 
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/ftyhnbvfgh/my-service', '.']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/my-service', '.']
 
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/ftyhnbvfgh/my-service']
+  args: ['push', 'gcr.io/$PROJECT_ID/my-service']
 
 - name: 'gcr.io/cloud-builders/gcloud'
   args: [
