Fix: small mistake

--- a/deployment/cloudbuild.yaml
+++ b/deployment/cloudbuild.yaml
@@ -3,8 +3,8 @@ options:
 
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/my-service', '-f', 'deployment/Dockerfile', '.']
-  dir: '..'
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/my-service', '.']
+  dir: 'deployment'
 
 
 - name: 'gcr.io/cloud-builders/docker'
