"Fix: Altering cloudbuild file because of an error on cloud build"

--- a/deployment/cloudbuild.yaml
+++ b/deployment/cloudbuild.yaml
@@ -3,8 +3,7 @@ options:
 
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/my-service', '.']
-  dir: 'deployment'
+  args: ['build', '-f', 'deployment/Dockerfile', '-t', 'gcr.io/$PROJECT_ID/my-service', '.']
 
 
 - name: 'gcr.io/cloud-builders/docker'
