--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -4,6 +4,9 @@ FROM nginx:alpine
 # Copy the webapp files to nginx's default serving directory
 COPY webapp /usr/share/nginx/html/
 
+# Copy a custom nginx configuration (optional, for better performance)
+COPY deployment/nginx.conf /etc/nginx/nginx.conf
+
 # Expose port 8080 (Cloud Run requirement)
 EXPOSE 8080
 
